--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     package="org.spacebison.multimic" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -30,12 +30,6 @@
         <activity
             android:name=".ui.AudioRecordActivity"
             android:label="Audio Record"/>
-        <activity
-            android:name=".ui.server.ClientListFragment"
-            android:label="Client list"/>
-        <activity
-            android:name=".ui.LogActivity"
-            android:label="Log"/>
 
     </application>
 
