--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,24 +13,20 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
+        android:supportsRtl="false"
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.ServerSearchActivity"
-            android:label="@string/title_activity_server_search"/>
-        <activity
-            android:name=".ui.server.ServerActivity"
-            android:label="@string/title_activity_server"/>
-        <activity
-            android:name=".ui.AudioRecordActivity"
-            android:label="@string/title_activity_client"/>
+
+        <service
+            android:name=".MultimicService"
+            android:process=":MultimicService"/>
 
         <!-- Google Analytics -->
         <meta-data
@@ -62,14 +58,24 @@
             android:exported="false"/>
 
         <activity
-            android:name=".ui.player.PlayerActivity"
-            android:label="@string/title_activity_player">
-        </activity>
+            android:name=".ui.ServerSearchActivity"/>
 
         <activity
-            android:name=".ui.player.PlayerListActivity"
-            android:label="@string/title_activity_player_list">
-        </activity>
+            android:name=".ui.ClientActivity"/>
+
+        <receiver
+            android:name=".ToastServiceBroadcastReceiver">
+            <intent-filter>
+                <action android:name="org.spacebison.multimic.ACTION_CONNECTED"/>
+                <action android:name="org.spacebison.multimic.ACTION_DISCONNECTED"/>
+                <action android:name="org.spacebison.multimic.ACTION_CLIENT_CONNECTED"/>
+                <action android:name="org.spacebison.multimic.ACTION_CLIENT_DISCONNECTED"/>
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name=".ui.ServerActivity"/>
+
     </application>
 
 </manifest>
