--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -58,21 +58,27 @@
         <activity
             android:name=".ui.ServerSearchActivity"
             android:label="Server search"/>
-
         <activity
-            android:name=".ui.ClientActivity"/>
-
+            android:name=".ui.ClientActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".ui.ServerActivity"
-            android:label="Recocrder"
+            android:label="Recorder"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".ui.SettingsActivity"
+            android:label="Settings"/>
+        <activity android:name=".ui.filepicker.FilePickerActivity"/>
 
         <service android:name=".model.ClientService"/>
         <service android:name=".model.ServerService"/>
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="ee6f4a84a024ba5df48c32c60245c9c81d3c8d84" />
+            android:value="ee6f4a84a024ba5df48c32c60245c9c81d3c8d84"/>
+
+        <activity android:name=".ui.PlayerActivity">
+        </activity>
     </application>
 
 </manifest>
